--- a/style.css
+++ b/style.css
@@ -8,4 +8,6 @@
 @import url("./css/07-quiz.css");
 @import url("./css/08-risk-compliance.css");
 @import url("./css/09-toc.css");
+@import url("./css/10-settings-modal.css");
+@import url("./css/11-feedbacks.css");
 @import url("./css/99-mobile-fixes.css");
